--- a/Views/LogIn/Index.cshtml
+++ b/Views/LogIn/Index.cshtml
@@ -38,19 +38,41 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                     <div class="top-head ml-lg-auto text-center">
                         <div class="row">
 
-                            <div class="col-md-4">
-                                <span>Welcome Back!</span>
-                            </div>
-                            <div class="col-md-3 sign-btn">
-                                <a href="#" data-toggle="modal" data-target="#exampleModalCenter">
-                                    <i class="fas fa-lock"></i> Sign In
-                                </a>
-                            </div>
-                            <div class="col-md-3 sign-btn">
-                                <a href="#" data-toggle="modal" data-target="#exampleModalCenter2">
-                                    <i class="far fa-user"></i> Register
-                                </a>
-                            </div>
+
+                            @if (TempData["Success"] != null)
+                            {
+                                <div class="alert alert-success">
+                                    @TempData["Success"]
+                                </div>
+                            }
+
+                            @{
+                                string fullName = Session["FullName"] as string;
+                                bool isLoggedIn = !string.IsNullOrEmpty(fullName);
+                            }
+
+                            @if (isLoggedIn == false)
+                            {
+                                <div class="col-md-4">
+                                    <span>"Welcome, Guest!"</span>
+                                </div>
+                                <div class="col-md-3 sign-btn">
+                                    <a href="#" data-toggle="modal" data-target="#exampleModalCenter">
+                                        <i class="fas fa-lock"></i> Sign In
+                                    </a>
+                                </div>
+                                <div class="col-md-3 sign-btn">
+                                    <a href="#" data-toggle="modal" data-target="#exampleModalCenter2">
+                                        <i class="far fa-user"></i> Register
+                                    </a>
+                                </div>
+                            }
+                            else
+                            {
+                                <div class="col-md-4">
+                                    <span>@(isLoggedIn ? $"Welcome Back, {fullName}!" : "Welcome Back!")</span>
+                                </div>
+                            }
                             <div class="search col-md-2">
                                 <div class="mobile-nav-button">
                                     <button id="trigger-overlay" type="button">
@@ -146,7 +168,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                                     <br> Lorem ipsum
                                 </div>
                                 <!--
-    -->
+                                -->
                                 <div class="flow-position">
                                     <img src="~/Content/images/s4.jpg" alt=" " class="img-fluid rounded-circle">
                                     <br>
@@ -156,7 +178,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                                     <br> Lorem ipsum
                                 </div>
                                 <!--
-    -->
+                                -->
                                 <div class="flow-position">
                                     <img src="~/Content/images/s5.jpg" alt=" " class="img-fluid rounded-circle">
                                     <br>
@@ -164,7 +186,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                                     <br> Lorem ipsum
                                 </div>
                                 <!--
-    -->
+                                -->
                                 <div class="flow-position">
                                     <img src="~/Content/images/s6.jpg" alt=" " class="img-fluid rounded-circle">
                                     <br>
@@ -174,7 +196,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                                     <br> Lorem ipsum
                                 </div>
                                 <!--
-    -->
+                                -->
                                 <div class="flow-position">
                                     <img src="~/Content/images/s7.jpg" alt=" " class="img-fluid rounded-circle">
                                     <br>
@@ -182,7 +204,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                                     <br> Lorem ipsum
                                 </div>
                                 <!--
-    -->
+                                -->
                                 <div class="flow-position">
                                     <img src="~/Content/images/s8.jpg" alt=" " class="img-fluid rounded-circle">
                                     <br>
@@ -761,7 +783,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     </footer>
     <!-- //footer -->
     <!--model-forms-->
-    <!--/Login-->
+    <!-- Login Modal -->
     <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered" role="document">
             <div class="modal-content">
@@ -771,36 +793,30 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                     </button>
                 </div>
                 <div class="modal-body">
-
                     <div class="login px-4 mx-auto mw-100">
                         <h5 class="text-center mb-4">Login Now</h5>
-                        <form action="#" method="post">
+                        <form action="/LogIn/Login" method="post">
+                            @Html.AntiForgeryToken()
                             <div class="form-group">
-                                <label class="mb-2">Email address</label>
-                                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="" required="">
-                                <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+                                <label class="mb-2">Username</label>
+                                <input type="text" class="form-control" name="username" placeholder="Enter your username" required>
                             </div>
                             <div class="form-group">
                                 <label class="mb-2">Password</label>
-                                <input type="password" class="form-control" id="exampleInputPassword1" placeholder="" required="">
-                            </div>
-                            <div class="form-check mb-2">
-                                <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                                <label class="form-check-label" for="exampleCheck1">Check me out</label>
+                                <input type="password" class="form-control" name="password" placeholder="Enter your password" required>
                             </div>
                             <button type="submit" class="btn btn-primary submit mb-4">Sign In</button>
                             <p class="text-center pb-4">
-                                <a href="#" data-toggle="modal2" data-target="#exampleModalCenter"> Don't have an account?</a>
+                                <a href="#" data-toggle="modal2" data-target="#exampleModalCenter2">Don't have an account?</a>
                             </p>
                         </form>
                     </div>
                 </div>
-
             </div>
         </div>
     </div>
-    <!--//Login-->
-    <!--/Register-->
+
+    <!-- Register Modal -->
     <div class="modal fade" id="exampleModalCenter2" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered" role="document">
             <div class="modal-content">
@@ -812,39 +828,57 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 <div class="modal-body">
                     <div class="login px-4 mx-auto mw-100">
                         <h5 class="text-center mb-4">Register Now</h5>
-                        <form action="#" method="post">
+                        <form action="/LogIn/Signup" method="post">
+                            @Html.AntiForgeryToken()
                             <div class="form-group">
-                                <label>First name</label>
-
-                                <input type="text" class="form-control" id="validationDefault01" placeholder="" required="">
+                                <label class="mb-2">Username</label>
+                                <input type="text" class="form-control" name="username" placeholder="Enter your username" required>
                             </div>
-                            <div class="form-group">
-                                <label>Last name</label>
-                                <input type="text" class="form-control" id="validationDefault02" placeholder="" required="">
-                            </div>
-
                             <div class="form-group">
                                 <label class="mb-2">Password</label>
-                                <input type="password" class="form-control" id="password1" placeholder="" required="">
+                                <input type="password" class="form-control" name="password" placeholder="Enter your password" required>
                             </div>
                             <div class="form-group">
-                                <label>Confirm Password</label>
-                                <input type="password" class="form-control" id="password2" placeholder="" required="">
+                                <label class="mb-2">Confirm Password</label>
+                                <input type="password" class="form-control" name="confirmPassword" placeholder="Confirm your password" required>
                             </div>
-
-                            <button type="submit" class="btn btn-primary submit mb-4">Register</button>
-                            <p class="text-center pb-4">
-                                <a href="#">By clicking Register, I agree to your terms</a>
-                            </p>
+                            <div class="form-group">
+                                <label class="mb-2">Full Name</label>
+                                <input type="text" class="form-control" name="fullName" placeholder="Enter your full name" required>
+                            </div>
+                            <div class="form-group">
+                                <label class="mb-2">Gender</label>
+                                <div>
+                                    <label><input type="radio" name="gender" value="Male" required> Male</label>
+                                    <label><input type="radio" name="gender" value="Female" required> Female</label>
+                                    <label><input type="radio" name="gender" value="Other" required> Other</label>
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label class="mb-2">Role</label>
+                                <select class="form-control" name="role" required>
+                                    <option value="Employee">Employee</option>
+                                    <option value="Manager">Manager</option>
+                                    <option value="Admin">Admin</option>
+                                </select>
+                            </div>
+                            <div class="form-group">
+                                <label class="mb-2">Department</label>
+                                <select class="form-control" name="department" required>
+                                    <option value="HR">HR</option>
+                                    <option value="IT">IT</option>
+                                    <option value="Finance">Finance</option>
+                                    <option value="Marketing">Marketing</option>
+                                </select>
+                            </div>
+                            <button type="submit" class="btn btn-primary submit mb-4">Sign Up</button>
                         </form>
-
                     </div>
                 </div>
-
             </div>
         </div>
     </div>
-    <!--//Register-->
+
     <!--//model-form-->
     <!-- js -->
     <!--/slider-->
