edited admin accounts

--- a/Views/Shared/_Layout_Admin.cshtml
+++ b/Views/Shared/_Layout_Admin.cshtml
@@ -48,6 +48,14 @@
                                     <span class="hide-menu">Login</span>
                                 </a>
                             </li>
+                            <li class="sidebar-item">
+                                <a class="sidebar-link" href="@Url.Action("Signup", "Admins")" aria-expanded="false">
+                                    <span>
+                                        <i class="ti ti-login"></i>
+                                    </span>
+                                    <span class="hide-menu">Signup</span>
+                                </a>
+                            </li>
                         }
                         else
                         {
