--- a/Views/Admins/Signup.cshtml
+++ b/Views/Admins/Signup.cshtml
@@ -14,7 +14,7 @@
 </head>
 <body>
     <section class="w3l-hotair-form">
-        <h1>Sign up for an Admin account</h1>
+        <h1>Sign up Admin account</h1>
         <div class="container">
             <div class="workinghny-form-grid">
                 <div class="main-hotair">
@@ -24,17 +24,13 @@
                         {
                             <div class="alert alert-danger">@TempData["Error"]</div>
                         }
-                        @if (TempData["Success"] != null)
-                        {
-                            <div class="alert alert-success">@TempData["Success"]</div>
-                        }
-                        <form action="/Admins/Signup" method="post">
-                            @Html.AntiForgeryToken()
-                            <input type="text" class="text" name="username" placeholder="User Name" required="" autofocus>
-                            <input type="password" class="password" name="password" placeholder="User Password" required="">
-                            <input type="text" class="text" name="fullname" placeholder="Full Name" required="" />
-                            <button class="btn" type="submit">Sign up</button>
-                        </form>
+                    <form action="/Admins/Signup" method="post">
+                        @Html.AntiForgeryToken()
+                        <input type="text" class="text" name="username" placeholder="User Name" required="" autofocus>
+                        <input type="password" class="password" name="password" placeholder="User Password" required="">
+                        <input type="text" class="text" name="fullName" placeholder="Full name" required="">
+                        <button class="btn" type="submit">Sign up</button>
+                    </form>
                     </div>
                     <div class="w3l_form align-self">
                         <div class="left_grid_info">
