--- a/Views/Admins/EmployeeList.cshtml
+++ b/Views/Admins/EmployeeList.cshtml
@@ -1,6 +1,4 @@
-﻿html
-Copy code
-@model IEnumerable<EmployeeManagementWebsite.Models.User>
+﻿@model IEnumerable<EmployeeManagementWebsite.Models.User>
 
 @{
     ViewBag.Title = "EmployeeList";
